# cpuminer-opt

./: .gitignore  Makefile.am  README.md  RELEASE_ANNOUNCEMENT  algo-gate-api.c  algo-gate-api.h  api.c  autogen.exe.stackdump  cpu-miner.c  cpuminer.vcxproj.filters  mingw64aes.sh  mingw64avx+aes.sh  mingw64avx.sh  mingw64avx2+aes.sh  mingw64avx2.sh  mingw64sse2.sh  sysinfos.c  util.c
algo/: drop.c  hmq1725.c  m7m.c  m7m.c.old  nist5.c  pluck.c  scrypt.c  zr5.c
algo/argon2/: argon2a.c
algo/blake/: decred.c
algo/cryptonight/: cryptolight.c  cryptonight-common.c
algo/groestl/: myr-groestl.c
algo/hodl/: aes.c.new  hodl-endian.h  hodl-gate.c  hodl-gate.c.new  hodl-wolf.c  hodl-wolf.c.new  hodl_arith_uint256.cpp  pthread-barrier.h  serialize.h  sha256.cpp  sha512.cpp  sha512_avx.c  sha512_avx2.c  wolf-aes.h  wolf-aes.h.old
algo/lyra2/: lyra2re.c  lyra2rev2.c
algo/quark/: quark.c
algo/qubit/: qubit.c
algo/x11/: c11.c  x11.c  x11evo.c  x11gost.c
algo/x13/: x13.c
algo/x14/: x14.c
algo/x15/: x15.c
algo/x17/: x17.c
